# o-culty

./: .gitignore  README.md  config.yaml  pyproject.toml
data/: .gitignore
docs/superpowers/specs/: 2026-03-17-occult-embeddings-design.md
scripts/: analyze.py  chunk.py  embed.py  embed_incremental.py  export_parquet.py  pick_best_version.py  process.py  scrape.py
src/: utils.py
src/analysis/: cluster.py  search.py  similarity.py  visualize.py
src/chunker/: chunker.py
src/embedder/: embedder.py
src/processor/: cleaner.py  html_extractor.py  ocr.py  pdf_extractor.py
src/scraper/: base.py  gutenberg.py  internet_archive.py  sacred_texts.py
tests/: test_chunker.py  test_cleaner.py  test_cluster.py  test_embedder.py  test_html_extractor.py  test_integration.py  test_ocr.py  test_pdf_extractor.py  test_scraper_base.py  test_scraper_gutenberg.py  test_scraper_ia.py  test_scraper_sacred_texts.py  test_search.py  test_similarity.py  test_utils.py  test_visualize.py
